--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -142,6 +142,11 @@
             background-color: rgba(255, 59, 66, 0.15);
             color: var(--color-red);
         }
+		
+        &.live-flag {
+            background-color: var(--color-green-hover);
+            color: white;
+        }
     }
 }
 
