--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -2780,7 +2780,7 @@ header .heading-row {
   font-weight: 500;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  overflow-wrap: break-word;
   -webkit-margin-after: 2px;
           margin-block-end: 2px;
 }
