--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -298,7 +298,7 @@
     font-weight: 500;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+	overflow-wrap: break-word;
     margin-block-end: 2px;
     @extend %theme-text-primary;
 }
