--- a/extension/popup/styles/_dropdown.scss
+++ b/extension/popup/styles/_dropdown.scss
@@ -15,7 +15,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 0 8px;
-        max-width: 186px;
+        max-width: 100%;
         height: 100%;
         border-radius: 6px;
         font-size: var(--font-body);
