--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -1777,6 +1777,7 @@ header .heading-row {
       -ms-flex-align: center;
           align-items: center;
   gap: 8px;
+  min-height: 16px;
 }
 .section-header.collapsible {
   position: sticky;
@@ -2589,8 +2590,8 @@ header .heading-row {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 8px;
-  padding: 8px;
+  gap: 6px;
+  padding: 4px;
 }
 .active-downloads > .initial-message,
 .downloads-history > .initial-message {
