feat: now we show icons on video-item based on the existing streams (video/audio/subs)
new:
- now we define 3 flags one time with logic to check tracks existnece first (any), if only one array is present, check in first entry which containers it has – do it once in video-processor
- we have unified icons for video-item (3) and history-item
- all these icons are now visible in all modes, according to media being downloaded

upd:
- dl-btn now is simple "Download" without icon
- unique icons, colors and sizes are removed from history-item
- new styles for title-row to wrap text under the icons (smar indentation calc)
- simplified checks for track existence for dl-btn-menu based on new flags

ref:
- download command now don't cleanup entry on cancellation, instead it sets 'wasCanceled' and lets close handler do the job (still cleanup to do here)
- progress updates are now checked upon wasCanceled flag, to stop propagation on canceled entries

--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -300,6 +300,7 @@
     text-overflow: ellipsis;
 	overflow-wrap: break-word;
     margin-block-end: 2px;
+	word-break: break-all;
     @extend %theme-text-primary;
 }
 
