--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -2184,8 +2184,7 @@ header .heading-row {
   -webkit-line-clamp: 2;
   line-clamp: 2;
   -webkit-box-orient: vertical;
-  word-break: break-word;
-  max-width: calc(100% - 30px);
+  word-break: break-all;
   line-height: 1.2;
 }
 
@@ -2444,22 +2443,6 @@ header .heading-row {
   height: 100%;
   width: 0;
   background-color: rgba(255, 255, 255, 0.1);
-}
-
-.download-btn-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-margin-end: 4px;
-          margin-inline-end: 4px;
-}
-.download-btn-icon svg {
-  width: 9px;
-  height: 9px;
-  fill: #FAFAFA;
 }
 
 .download-menu-btn {
@@ -2896,6 +2879,7 @@ header .heading-row {
   overflow-wrap: break-word;
   -webkit-margin-after: 2px;
           margin-block-end: 2px;
+  word-break: break-all;
 }
 
 .download-stats {
