--- a/extension/popup/styles/_video-items.scss
+++ b/extension/popup/styles/_video-items.scss
@@ -192,8 +192,7 @@
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
-    word-break: break-word;
-    max-width: calc(100% - 30px);
+    word-break: break-all;
     line-height: 1.2;
 }
 
@@ -493,18 +492,6 @@
         height: 100%;
         width: 0;
         background-color: rgba(255, 255, 255, 0.1);
-    }
-}
-
-.download-btn-icon {
-    display: flex;
-    align-items: center;
-    margin-inline-end: 4px;
-
-    svg {
-        width: 9px;
-        height: 9px;
-        fill: #FAFAFA;
     }
 }
 
