--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -652,7 +652,7 @@ header .heading-row {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0 8px;
-  max-width: 100%;
+  max-width: 194px;
   height: 100%;
   border-radius: 6px;
   font-size: var(--font-body);
